--- a/kubernetes/symfony-deployment.yaml
+++ b/kubernetes/symfony-deployment.yaml
@@ -1,6 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+    namespace: symfony-kubernetes-ns
     name: symfony-deployment
     labels:
         app: symfony
